--- a/src/Bio_jill.css
+++ b/src/Bio_jill.css
@@ -139,6 +139,25 @@ article{
 }
 
 /*@MEDIA QUERIES*/
+/* On screens that are between 601px and 900px wide, enlarge bio photos home page */
+
+@media screen and (max-width: 600px) {
+  #Bernard_profile_photo, #Jill_profile_photo, #Elena_profile_photo, #Harry_profile_photo, #Lennie_profile_photo {
+    display:block;
+    margin-right:13%;
+    margin-left: 13%;
+    height: 74%;
+    width:74%; 
+    border:solid grey 3px;
+    border-radius: 15%;
+    -webkit-border-radius: 15%;
+    -moz-border-radius: 15%;
+    -ms-border-radius: 15%;
+    -o-border-radius: 15%;
+  }
+}
+
+/*@MEDIA QUERIES*/
 /* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other and enlarge Thomas Family photo home page */
 
 @media screen and (max-width: 600px) {
